<resources>
    <string name="app_name">Trend Games</string>
    <string name="games">Games</string>
    <string name="search">Search</string>
    <string name="no_game_has_been_found">No game has been found.</string>
    <string name="publishers">Publishers:</string>
    <string name="genres">Genres:</string>
    <string name="play_time">Play Time:</string>
    <string name="release_date">Release Date:</string>
    <string name="description">Description</string>
    <string name="information">Information</string>
    <string name="visit_reddit">Visit Reddit</string>
    <string name="visit_website">Visit Website</string>
    <string name="game_detail">Game Detail</string>
    <string name="you_are_about_the_game_remove_from_your_wishlist_are_you_sure">You are about remove the game  from your wishlist. Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

</resources>