<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen20dp"
    android:background="@color/bokora_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvDeleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/ToolBarTextStyle"
        android:text="@string/you_are_about_the_game_remove_from_your_wishlist_are_you_sure"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen18sp"
        android:backgroundTint="@color/gray"
        app:layout_constrainedWidth="true"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/dimen20dp"
        android:layout_marginEnd="@dimen/dimen20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleteMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnYes"/>

    <Button
        android:id="@+id/btnYes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_marginEnd="@dimen/dimen20dp"
        android:backgroundTint="@color/orange"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen18sp"
        app:layout_constrainedWidth="true"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/tvDeleteMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>